# quux

./: .gitignore  CMakeLists.txt  QuuxConfig.cmake.in  README.md
quux/: CMakeLists.txt  quux.cc  quux.h  quux_version_h.in  quuxifier.cc
tests/: CMakeLists.txt  test_quux.cc
